--- a/package.json
+++ b/package.json
@@ -153,8 +153,7 @@
     "lint:fix": "eslint --fix ./",
     "prepare": "husky",
     "prebuild": "npm run generate-models",
-    "build": "tsup && npm run resolve-schemas",
-    "resolve-schemas": "node scripts/resolve-schema-refs.js",
+    "build": "tsup",
     "generate-models": "tsx scripts/generate-source-models.js",
     "clean:generated": "rm -rf .generated",
     "start": "node scripts/build.js --watch",
