--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -25,7 +25,10 @@ jobs:
           node-version: 20
           # npm token
           cache: "npm"
+          registry-url: "https://registry.npmjs.org"
 
+      - name: Update npm
+        run: npm install -g npm@latest
       - run: npm ci
       - run: npm run lint
       - run: npm run build
@@ -40,7 +43,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: https://registry.npmjs.org
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
+      - name: Update npm
+        run: npm install -g npm@latest
       - run: npm ci
       - run: npm run build
       # check if package.json version matches release tag
