--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kohost/api-client",
-  "version": "4.15.3",
+  "version": "4.15.4-beta.0",
   "description": "API client, models, schemas, commands, and events for Kohost applications",
   "author": "Ian Rogers",
   "readme": "README.md",
