--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "@types/node": "^22.10.5",
     "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
     "husky": "^9.0.11",
     "json-schema-to-ts": "^3.1.1",
     "lint-staged": "^16.2.7",
